Bug 1320087 - Make the captive portal report UNKNOWN when the wifi is down r=bagder a=jcristau * Start/Stop the captive portal service in nsIOService::SetConnectivityInternal * Set the captive portal state to UNKNOWN when stopping it.

MozReview-Commit-ID: 5dude1F4lNb